[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iconsdk"
version = "2.6.0"
description = """
ICON SDK for Python is a collection of libraries that allow you to
interact with local or remote ICON nodes using HTTP connections.
"""
authors = [
    { name = "ICON Foundation", email = "foo@icon.foundation" }
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.13",
    "coincurve>=21.0.0",
    "eth-keyfile>=0.9.1",
    "multimethod>=2.0",
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
]
license = { text = "Apache License 2.0" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/icon-project/icon-sdk-python"
Releases = "https://github.com/icon-project/icon-sdk-python/releases"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "requests-mock>=1.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["iconsdk"]
